--- a/digitalalbum.html
+++ b/digitalalbum.html
@@ -75,7 +75,7 @@
   </header>
 
   <form id="uploadForm">
-    <input type="text" id="name" placeholder="Your Name" required />
+    <input type="text" id="name" placeholder="Your Name" />
     <textarea id="message" rows="3" placeholder="Your Message"></textarea>
     <input type="file" id="imageUpload" accept="image/*" required />
     <button type="submit">Upload Photo</button>
